import "common.proto";
// ===================================================================
// 下行消息
// ===================================================================
message down_msg {
    optional error_info     error      = 1;  // 错误信息
    optional notify_msg     notify     = 2;  // 通知消息
    optional login_reply    login      = 3;  // 登录
    optional role_reply     role       = 4;  // 角色
    optional rtnotify_reply rtnotify   = 5;  // realtime notify
    optional magic_reply    magic      = 6;  // 魔法
    optional team_reply     team       = 7;  // 队伍
    optional match_reply    match      = 8;  // 匹配
}


// ===================================================================
// 通用结果
// ===================================================================
enum result {
    success = 0;
    fail    = 1;
}

// ===================================================================
// 服务器通知
// ===================================================================
message notify_msg {
    optional team_notify          notify        = 1; 
    optional battle_match_notify  battle_match  = 2;
    optional battle_result_notify battle_result = 3;
}

message error_info {
	optional string msg = 1;  // 错误消息 
}

// ===================================================================
// 登录回复
// ===================================================================
message login_reply {
    enum login_result {
        new_user = 1;       // 新增玩家
        default_role = 2;   // 默认选择角色（直接进入游戏）
        role_list = 3; 		// 角色摘要数据列表（选择角色或创建角色）
    }
    required login_result     		 result 	= 1;  // 登录结果
    required uint32 			 user_id	= 2;  // 玩家ID
    optional role_st  			 role 		= 3;  // 第一个角色的数据
    repeated role_summary_st  	 roles  	= 4;  // 角色列表
}


// ===================================================================
// 角色回复
// ===================================================================
message role_reply {
    optional create_role_reply    create  = 1;  // 创建角色
    optional select_role_reply    select  = 2;  // 选择角色
    optional lookup_role_reply    lookup  = 3;  // 查看角色
}

// 创建角色
message create_role_reply {
    enum create_role_result {
        success = 0;              // 创建成功
        nickname_repeat = 1;      // 昵称重复
        nickname_error  = 2;      // 昵称不符合规范
        nickname_dirty  = 3;      // 昵称含有屏蔽字
    }
    required create_role_result   result   = 1;  // 创建结果
    optional role_st  role     = 2;  // 角色数据，创建成功返回          
}

// 选择角色
message select_role_reply {
    required role_st   role   = 1; // 角色数据
}

// 查看角色
message lookup_role_reply {
    repeated role_st   roles   = 1; // 角色列表
}

// ===================================================================
// rtnotify_req
// ===================================================================
message rtnotify_reply {
    optional result                         register    = 1;
    optional rtnotify_keepalive_reply       keepalive   = 2;
    optional rtnotify_callback_reply        callback    = 3;
}

message rtnotify_keepalive_reply {
    optional uint32 time = 1; //
}

message rtnotify_callback_reply {
    optional uint32 string = 1; //
}


// ===================================================================
// 魔法回复
// ===================================================================
message magic_reply {
    optional select_magic_reply     select = 1;  // 选择魔法
}

// 选择魔法
message select_magic_reply {
    optional result result = 1;
}

// ===================================================================
// 组队回复
// ===================================================================
message team_reply {
    optional team_member_st     invite     = 1;  // 组队邀请
    optional team_info_st       accept     = 2;  // 接受邀请
    optional result         	refuse     = 3;  // 拒绝邀请
    optional result         	state      = 4;  // 状态修改
    optional result         	leave      = 5;  // 离开队伍
}


message team_notify {
    
}


// ===================================================================
// 匹配回复
// ===================================================================
enum match_result{
    success     = 1;
    matching    = 2;
    matched     = 3;
}

message match_reply {
    optional match_result     start      = 1;  // 开始匹配
    optional match_result     cancel     = 2;  // 取消匹配
}

message battle_match_notify {
    optional battle_team    team_a          = 1; //
    optional battle_team    team_b          = 2; // 
    optional string         battle_ip       = 3; 
    optional uint32         battle_port     = 4; 
}

message battle_result_notify {
    optional uint32         battle_id = 1;
    optional uint32         result    = 2;
    optional battle_reward  reward    = 3; 
}

message reward {
    enum reward_type {
        element  = 1;
    }
    optional reward_type    type    = 1; 
    optional uint32         id      = 2;
    optional uint32         level   = 3;
    optional uint32         amount  = 4;
}

message battle_reward {
    repeated reward     rewards = 1;
}
